--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "mangadex-api",
+  "name": "nodejs-template",
   "version": "1.0.1",
-  "description": "Mangadex api version 5.9.0",
+  "description": "nodejs 18 template",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
-  "repository": "https://github.com/boydaihungst/mangadex-api",
+  "repository": "https://github.com/boydaihungst/nodejs18-template",
   "license": "MIT",
   "keywords": [],
   "scripts": {
@@ -34,32 +34,41 @@
     "doc:json": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --json build/docs/typedoc.json",
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "version": "standard-version",
-    "reset-hard": "git clean -dfx && git reset --hard && yarn",
-    "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish"
+    "prepare-release": "run-s test cov:check doc:html version doc:publish"
   },
   "engines": {
-    "node": ">=10"
+    "node": ">=18"
   },
   "dependencies": {
-    "@bitauth/libauth": "^1.17.1"
+    "chalk": "^5.2.0",
+    "dotenv": "^16.0.3",
+    "lodash": "^4.17.21",
+    "utility-types": "^3.10.0"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "ava": "^3.12.1",
     "codecov": "^3.5.0",
-    "cspell": "^4.1.0",
+    "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.8.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "gh-pages": "^3.1.0",
+    "husky": "^8.0.3",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "open-cli": "^6.0.1",
+    "pino": "^7.0.0-rc.9",
+    "pino-pretty": "^9.1.1",
     "prettier": "^2.1.1",
     "standard-version": "^9.0.0",
     "ts-node": "^9.0.0",
@@ -87,13 +96,28 @@
       "!build/module/**"
     ]
   },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+    }
+  },
   "prettier": {
-    "singleQuote": true
+    "semi": true,
+    "arrowParens": "always",
+    "singleQuote": true,
+    "bracketSpacing": true,
+    "trailingComma": "all"
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
