--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+      "prepare-commit-msg": "exec < /dev/tty && npx cz --hook || true"
     }
   },
   "prettier": {
