--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "doc:json": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --json build/docs/typedoc.json",
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "version": "standard-version",
-    "prepare-release": "run-s test cov:check doc:html version doc:publish"
+    "prepare-release": "run-s test cov:check doc:html version doc:publish",
+    "postinstall": "is-ci || husky install",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable"
   },
   "engines": {
     "node": ">=18"
@@ -64,11 +67,13 @@
     "eslint-plugin-prettier": "^4.2.1",
     "gh-pages": "^3.1.0",
     "husky": "^8.0.3",
+    "is-ci": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "open-cli": "^6.0.1",
     "pino": "^7.0.0-rc.9",
     "pino-pretty": "^9.1.1",
+    "pinst": "^3.0.0",
     "prettier": "^2.1.1",
     "standard-version": "^9.0.0",
     "ts-node": "^9.0.0",
